--- a/practical_day1-intermediate.Rmd
+++ b/practical_day1-intermediate.Rmd
@@ -38,6 +38,8 @@ theme_set(theme_bw(14)) # if you wish to get this theme by default
 
 Working with GEO datasets could be an hassle and you are going to experience it.
 Extensive manipulation of tables (`data.frame` and `matrix`) is required and provide a nice exercise.
+Here, we will investigate the relationship between the expression of _ENTPD5_ and mir-182 as described by the authors. Even if, the data are normalised and should be ready to use, quite 
+an extensive amount of work is required to reproduce the claimed result.
 
 ## Retrieve GEO study
 
@@ -338,15 +340,40 @@ the two dot clouds between normal and cancer origin do split by
 but the trend is not so clear
 ```
 
-## Supplementary exercise
+## Supplementary exercise - linear regression
 
-
+- get the estimate from the linear trend.
+linear models output by `lm()` are lists. Since `data.frame` are much easier to work with,
+[David Robinson](http://varianceexplained.org/) developed [`broom`](https://cran.r-project.org/web/packages/broom/index.html).
+More will be done in the advanced lecture, but here see test the `broom::tidy()` coupled with `dplyr::do()`.
 ```{r}
 library("broom")
 expression %>%
   separate(source_name_ch1, c("source", "rest"), sep = 12) %>%
   group_by(source) %>%
-  do(tidy(lm(rna_expression ~ mir_expression, data = .)))
+  do(tidy(lm(rna_expression ~ mir_expression, data = .))) %>%
+  filter(term != "(Intercept)")
 ```
 
+The estimate of the intercept is not meaningful so filtered out.
+One can easily see that the slope is not significant when data are slipped by source.
+
+- Perform the linear regression and tidy the results for all data, is it significant?
+```{r, solution=TRUE}
+expression %>%
+  do(tidy(lm(rna_expression ~ mir_expression, data = .))) %>%
+  filter(term != "(Intercept)")
+```
+```{asis, solution=TRUE}
+with a pvalue of 7.54e-6, the negative is highly significant
+```
+
+- replace `tidy` by `glance` to get the $r^2$. Is this value satisfactory?
+```{r, solution=TRUE}
+expression %>%
+  do(glance(lm(rna_expression ~ mir_expression, data = .)))
+```
+```{asis, solution=TRUE}
+with a r^2 of 0.236, i.e only 23.6% of the variance explained, a linear fit sounds bad due to outliers
+```
 
