--- a/lecture_day2-advanced.Rmd
+++ b/lecture_day2-advanced.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "R workshop"
 author: "Aurélien Ginolhac"
-date: "3rd June 2016"
+date: "3^rd^ June 2016"
 output:
   ioslides_presentation:
     css: style.css
